crates/service/tests/completion/snapshots/features__completion__global__export.snap
---
source: crates/service/tests/completion/global.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6
  },
  {
    "label": "$global",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6
  }
]
