crates/service/tests/completion/snapshots/features__completion__global__export_following_dollar.snap
---
source: crates/service/tests/completion/global.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 23
        },
        "end": {
          "line": 4,
          "character": 24
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$global",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 23
        },
        "end": {
          "line": 4,
          "character": 24
        }
      },
      "newText": "$global"
    }
  }
]
