crates/service/tests/completion/snapshots/features__completion__global__export_following_ident.snap
---
source: crates/service/tests/completion/global.rs
expression: response
---
[
  {
    "label": "$global",
    "kind": 6,
    "insertText": "global"
  }
]
