crates/service/tests/completion/snapshots/features__completion__global__export_following_int_idx.snap
---
source: crates/service/tests/completion/global.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 6
  },
  {
    "label": "$global",
    "kind": 6
  }
]
