crates/service/tests/completion/snapshots/features__completion__global__global_type_mut_keyword.snap
---
source: crates/service/tests/completion/global.rs
expression: response
---
[
  {
    "label": "mut",
    "kind": 14
  },
  {
    "label": "import",
    "kind": 14
  },
  {
    "label": "export",
    "kind": 14
  },
  {
    "label": "ref",
    "kind": 14
  }
]
