crates/service/tests/completion/snapshots/features__completion__global__globals.snap
---
source: crates/service/tests/completion/global.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 21
        },
        "end": {
          "line": 2,
          "character": 22
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$global",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 21
        },
        "end": {
          "line": 2,
          "character": 22
        }
      },
      "newText": "$global"
    }
  }
]
